fixing shift in the hero section

--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,16 @@ h2 {
 @font-face {
   font-family: "Bebas Neue";
   src: url("/assets/fonts/Bebas_Neue/BebasNeue-Regular.woff2") format("woff2");
-  font-display: optional
+  font-display: swap;
+  /* Allows a fallback font while loading */
 }
 
 @font-face {
-  font-family: Roboto;
+  font-family: "Roboto";
   src: url("/assets/fonts/Roboto/static/Roboto-Regular.woff2") format("woff2");
-  font-display: optional
+  font-display: swap;
 }
+
 
 .fonts-loaded body {
   font-family: 'Bebas Neue', Roboto, sans-serif
